# pact-js

./: .babelrc  .cirrus.yml  .codeclimate.yml  .cpd.yaml  .editorconfig  .eslintrc.json  .eslintrc.yml  .gitattributes  .gitignore  .istanbul.yml  .mocharc.json  .npmignore  .nycrc  .prettierignore  .prettierrc.yml  .snyk  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.alpine  Dockerfile.ci.node.latest  Dockerfile.ci.node.v0.12  Dockerfile.ci.node.v12  Dockerfile.ci.node.v4  Dockerfile.ci.node.v5  Dockerfile.debian  LICENSE  MIGRATION.md  README.md  RELEASING.md  ROADMAP.md  appveyor.yml  biome.jsonc  bower.json  index.js  package-lock.json  package.json  package.json.web  tsconfig.json  (+2 more)
.github/: FUNDING.yml  issue_template.md  pull_request_template.md  renovate.json  semantic.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: tech-writer.agent.md
.github/workflows/: build-and-test.yml  end-to-end-tests.yml  manual_release.yml  publish-9x.yml  publish-v3.yml  publish.yml  release-native.yaml  release.yaml  smartbear-issue-label-added.yml  test-examples.yml  test.yml  triage.yml  trigger_pact_docs_update.yml
config/: rollup.config.js  webpack.config.js  webpack.node.config.js  webpack.web.config.js
docs/: consumer.md  graphql.md  index.html  matching.md  messages.md  plugins.md  provider.md  troubleshooting.md  xml.md
docs/migrations/: 16.md  9-10.md
example/: index.js  server_a.js
examples/: README.md  installAll.sh  run-all  runAll.sh
examples/ava/: README.md  index.js  package-lock.json  package.json
examples/e2e/: .eslintrc.json  .eslintrc.yml  README.md  Vagrantfile  consumer.js  consumerService.js  package-lock.json  package.json  provider.js  provider.spec.js  providerService.js  repository.js
examples/graphql/: .mocharc.json  README.md  consumer.js  consumer.spec.js  consumer.spec.ts  consumer.test.ts  consumer.ts  foo.js  mocha.opts  package-lock.json  package.json  provider.js  provider.spec.js  provider.spec.ts  provider.test.ts  provider.ts  publish.js  tsconfig.json
examples/http/: README.md  consumer.test.ts  consumer.ts  package-lock.json  package.json  provider.test.ts  provider.ts
examples/jest/: README.md  index.js  package-lock.json  package.json  pactSetup.js  pactTestWrapper.js  publish.js  schroedinger.js
examples/karma/: client-spec.js  karma.conf.js  package-lock.json  package.json
examples/karma-jasmine/: Gemfile  client-spec.js  karma.conf.js  package.json
examples/karma-mocha/: client-spec.js  client.js  karma.conf.js  package.json
examples/matchers/: README.md  consumer.test.ts  consumer.ts  package-lock.json  package.json  provider.test.ts  provider.ts
examples/messages/: .mocharc.json  README.md  consumer.test.ts  consumer.ts  myjsmessageconsumer-myjsmessageprovider.json  package-lock.json  package.json  provider.test.ts  provider.ts  publish.js  tsconfig.json
native/: Cargo.toml  Dockerfile.musl  build-native.sh  entrypoint.sh  index.node.d.ts  nvm-musl.sh
native/src/: lib.rs  utils.rs  verify.rs  xml.rs
pact-dsl/: package.json
pact-interceptor/: .istanbul.yml  package.json
pact-mocha-interface/: package.json
regression/: package-lock.json  package.json  tsconfig.json  vitest.config.consumer.ts  vitest.config.provider.ts
scripts/: build.ps1  build.sh  calc-sha256.js  create_npmrc_file.sh  deploy.ps1  install-plugins  install-plugins.js  install-plugins.sh  install.sh  native-lib-details.js  prepare.sh  publish.sh  publish_native.sh  run-audit-fix-on-examples.sh  trigger-9x-release.sh  trigger-beta-release.sh  trigger-release.sh
src/: httpPact.spec.ts  httpPact.ts  index.ts  message-consumer.ts  message-producer.ts  messageConsumer.spec.ts  messageConsumer.ts  messageConsumerPact.spec.ts  messageConsumerPact.ts  messageProvider.spec.ts  messageProvider.ts  messageProviderPact.spec.ts  messageProviderPact.ts  pact-karma.d.ts  pact-karma.js  pact-web.d.ts  pact-web.js  pact-web.spec.ts  pact-web.ts  pact.d.ts  pact.integration.spec.ts  pact.js  pact.spec.ts  pact.ts  types.ts
src/v3/native/: Cargo.toml  artifacts.json
src/v3/native/src/: lib.rs  utils.rs  verify.rs  xml.rs
test/: helper.js  helper.ts  mocha.opts  pact.spec.js  pact.spec.ts  specHelper.js
v3/: index.ts
(+614 files in other folders)
