[package]
name = "pact-js-v3"
version = "0.0.6"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "pact_js_v3"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = { version = "0.7.0", default-features = false, features = ["event-queue-api", "napi-6"] }
pact_mock_server = "0.7.14"
pact_mock_server_ffi = ">=0.0.14"
pact_matching = "0.8.8"
pact_verifier = "0.10.3"
env_logger = "0.8"
log = "0.4.6"
uuid = { version = "0.8.1", features = ["v4"] }
serde_derive = "1.0.80"
serde = "1.0.80"
serde_json = "1.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
tokio = { version = "1", features = ["full"] }
ansi_term = "0.12.1"
url = "2.2.0"
futures = "0.3"
sxd-document = "0.3.2"
async-trait = "0.1.24"
either = "1.6.1"

[dependencies.reqwest]
version = "0.11.0"
default-features = false
features = ["rustls-tls"]
